[gd_scene load_steps=22 format=3 uid="uid://dp2gnkbdq83n4"]

[ext_resource type="Script" uid="uid://dxs6vaw1rnav4" path="res://scripts/BattleEntity.gd" id="1_m46ik"]
[ext_resource type="Texture2D" uid="uid://o05esm5l4emw" path="res://assets/ui/ap.png" id="3_0ty8o"]
[ext_resource type="PackedScene" uid="uid://bcuvnhkfoa0u" path="res://scenes/ui/health_bar.tscn" id="3_b5iiw"]
[ext_resource type="Texture2D" uid="uid://duwanoipd03rk" path="res://assets/ui/selection_circle.png" id="4_i6faa"]
[ext_resource type="Texture2D" uid="uid://nxqruldg0w6s" path="res://assets/explosion.png" id="5_qnmwp"]
[ext_resource type="PackedScene" uid="uid://cto77pwu6noeu" path="res://scenes/ui/ap_display.tscn" id="5_wqjtl"]
[ext_resource type="AudioStream" uid="uid://fjhqrwyqj5im" path="res://addons/sfx/Retro Explosion Short 15.wav" id="6_0htqn"]
[ext_resource type="AudioStream" uid="uid://c5cnketelr6mc" path="res://addons/sfx/Retro Blop 18.wav" id="7_5e4t5"]
[ext_resource type="AudioStream" uid="uid://lnqaagn01gqm" path="res://assets/audio/homemade/SFX/bwoaa.wav" id="9_deo4h"]
[ext_resource type="AudioStream" uid="uid://b22eiqdfnoyr" path="res://addons/sfx/Retro FootStep 03.wav" id="10_5ppgc"]

[sub_resource type="Animation" id="Animation_nv0nl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8twhj"]
resource_name = "face_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_xh3tb"]
resource_name = "face_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_meimr"]
_data = {
&"RESET": SubResource("Animation_nv0nl"),
&"face_left": SubResource("Animation_8twhj"),
&"face_right": SubResource("Animation_xh3tb")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_cirw1"]
atlas = ExtResource("5_qnmwp")
region = Rect2(0, 0, 120, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2puk"]
atlas = ExtResource("5_qnmwp")
region = Rect2(120, 0, 120, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_323n4"]
atlas = ExtResource("5_qnmwp")
region = Rect2(240, 0, 120, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b8tf"]
atlas = ExtResource("5_qnmwp")
region = Rect2(360, 0, 120, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d8ve"]
atlas = ExtResource("5_qnmwp")
region = Rect2(480, 0, 120, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aawl"]
atlas = ExtResource("5_qnmwp")
region = Rect2(600, 0, 120, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_pjh8r"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cirw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2puk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_323n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b8tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d8ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aawl")
}],
"loop": false,
"name": &"explosion",
"speed": 8.0
}]

[node name="BattleEntity" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_m46ik")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(40, 0)
offset_left = -18.0
offset_top = -125.0
offset_right = 22.0
offset_bottom = -113.0
size_flags_horizontal = 4
alignment = 1

[node name="Control" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Ap_orbs" type="GridContainer" parent="VBoxContainer/Control"]
texture_filter = 2
layout_mode = 0
offset_top = -1.0
offset_right = 42.0
offset_bottom = -1.0
scale = Vector2(1, -1)
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6

[node name="Control" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control2" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control3" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control3"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control4" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control4"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control5" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control5"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control6" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control6"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control7" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control7"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control8" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control8"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control9" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control9"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control10" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control10"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control11" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control11"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control12" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control12"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control13" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control13"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control14" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control14"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control15" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control15"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control16" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control16"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control17" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control17"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control18" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control18"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control19" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control19"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control20" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control20"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control21" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control21"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control22" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control22"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control23" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control23"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control24" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control24"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control25" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control25"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control26" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control26"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control27" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control27"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control28" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control28"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control29" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control29"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control30" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control30"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control31" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control31"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control32" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control32"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control33" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control33"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control34" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control34"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control35" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control35"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control36" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control36"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control37" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control37"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control38" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control38"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control39" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control39"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control40" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control40"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control41" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control41"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control42" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control42"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control43" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control43"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control44" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control44"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control45" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control45"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control46" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control46"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control47" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control47"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control48" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control48"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control49" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control49"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control50" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control50"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control51" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control51"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control52" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control52"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control53" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control53"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control54" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control54"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control55" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control55"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control56" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control56"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control57" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control57"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control58" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control58"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control59" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control59"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control60" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control60"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control61" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control61"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control62" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control62"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control63" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control63"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control64" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control64"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control65" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control65"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="Control66" type="Control" parent="VBoxContainer/Control/Ap_orbs"]
layout_mode = 2

[node name="Ap" type="Sprite2D" parent="VBoxContainer/Control/Ap_orbs/Control66"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_0ty8o")

[node name="HealthBar" parent="VBoxContainer" node_paths=PackedStringArray("associated_entity") instance=ExtResource("3_b5iiw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
associated_entity = NodePath("../..")

[node name="StatusEffects" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="visual" type="Node2D" parent="."]

[node name="Flipper" type="AnimationPlayer" parent="visual"]
libraries = {
&"": SubResource("AnimationLibrary_meimr")
}

[node name="Actions" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = -49.0
offset_top = -76.0
offset_right = 51.0
offset_bottom = 84.0
texture_pressed = ExtResource("4_i6faa")
texture_focused = ExtResource("4_i6faa")

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_right = 54.0
offset_bottom = 40.0

[node name="ActionMenu" type="BoxContainer" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 68.0
offset_top = -60.0
offset_right = 108.0
offset_bottom = -20.0
vertical = true

[node name="ApDisplay" parent="Menu" instance=ExtResource("5_wqjtl")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 98.0
offset_top = -82.0
offset_right = 138.0
offset_bottom = -82.0
grow_horizontal = 1
grow_vertical = 1

[node name="explosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_pjh8r")
animation = &"explosion"

[node name="sound_effects" type="Node" parent="."]

[node name="explosion" type="AudioStreamPlayer" parent="sound_effects"]
stream = ExtResource("6_0htqn")
volume_db = -10.0
bus = &"SFX"

[node name="menu_up" type="AudioStreamPlayer" parent="sound_effects"]
stream = ExtResource("7_5e4t5")
volume_db = -18.0
pitch_scale = 0.8
bus = &"SFX"

[node name="melee_attack" type="AudioStreamPlayer" parent="sound_effects"]
volume_db = -10.0
bus = &"SFX"

[node name="bwoaa" type="AudioStreamPlayer" parent="sound_effects"]
stream = ExtResource("9_deo4h")
pitch_scale = 1.81
bus = &"SFX"

[node name="hit" type="AudioStreamPlayer" parent="sound_effects"]
stream = ExtResource("10_5ppgc")
volume_db = -10.0
pitch_scale = 2.0
bus = &"SFX"

[node name="level label" type="Label" parent="."]
visible = false
offset_left = -18.0
offset_top = -151.0
offset_right = 22.0
offset_bottom = -128.0

[connection signal="health_changed" from="." to="VBoxContainer/HealthBar" method="_on_battle_entity_health_changed"]
[connection signal="received_damage" from="." to="VBoxContainer/HealthBar" method="_on_battle_entity_received_damage"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="focus_entered" from="TextureButton" to="." method="_on_texture_button_focus_entered"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
